--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 18.0 Runtime 1">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.ejb;jpt.jpa"/>
+			<attribute name="owner.project.facets" value="jpt.jpa;jst.ejb"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
