--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="ejbModule"/>
+	<classpathentry excluding="META-INF/lib/" kind="src" path="ejbModule"/>
+	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
@@ -8,10 +9,14 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 18.0 Runtime 1">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 22.0 Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="jpt.jpa;jst.ejb"/>
+			<attribute name="owner.project.facets" value="jst.ejb;jpt.jpa"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container/restauWebRs"/>
+	<classpathentry kind="lib" path="ejbModule/META-INF/lib/javax.json.bind-api-1.0.jar"/>
+	<classpathentry kind="lib" path="ejbModule/META-INF/lib"/>
+	<classpathentry kind="lib" path="lib/javax.json-1.1.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
